RESOLVED FIXED219737
REGRESSION(r270186): [GTK] MiniBrowser: do not exit after load when no arguments given
https://bugs.webkit.org/show_bug.cgi?id=219737
Summary REGRESSION(r270186): [GTK] MiniBrowser: do not exit after load when no argume...
Carlos Garcia Campos
Reported 2020-12-10 05:19:47 PST
Only exit after load when --exit-after-load is passed.
Attachments
Patch (1.29 KB, patch)
2020-12-10 05:21 PST, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2020-12-10 05:21:51 PST
Carlos Garcia Campos
Comment 2 2020-12-11 02:50:56 PST
Note You need to log in before you can comment on or make changes to this bug.