REGRESSION(r270186): [GTK] MiniBrowser: do not exit after load when no arguments given https://bugs.webkit.org/show_bug.cgi?id=219737

Reviewed by Adrian Perez de Castro.

Only exit after load when --exit-after-load is passed.

* MiniBrowser/gtk/main.c:
(activate):

Canonical link: https://commits.webkit.org/232336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270673 268f45cc-cd09-0410-ab3c-d52691b4dbfc